--- a/styles/style.scss
+++ b/styles/style.scss
@@ -68,7 +68,7 @@ body {
     main {
         section.background-img {
             min-height: 70vh;
-            background-image: url(../images/日本櫻花.jpg);
+            background-image: url(../images/sakura.jpg);
             background-size: cover;
             background-position: center;
             position: relative;
