--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -63,7 +62,7 @@ body header nav ul li a:hover {
 }
 body main section.background-img {
   min-height: 70vh;
-  background-image: url(../images/日本櫻花.jpg);
+  background-image: url(../images/sakura.jpg);
   background-size: cover;
   background-position: center;
   position: relative;
